--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./input:/home/input
       - ./output:/home/output
+      - $(pwd)/nnUNet_results:/home/nnUNet/data/models
     # deploy:
     #   resources:
     #   reservations:
