--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,15 @@ services:
   nnuNetv1:
     image: anilyerramasu/nnunetv1_models_2d_gpu
     ports:
-      - 5000:5000
+      - 6000:5000
     volumes:
       - ./input:/home/input
       - ./output:/home/output
       - ./nnUNet_results:/home/nnUNet/data/models
-    # deploy:
-    #   resources:
-    #   reservations:
-    #     generic_resources:
-    #       - discrete_resource_spec:
-    #         kind: 'NVIDIA-GPU'
-    #         value: 0
+    deploy:
+      resources:
+      reservations:
+        generic_resources:
+          - discrete_resource_spec:
+            kind: 'NVIDIA-GPU'
+            value: 0
