--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       - ./input:/home/input
       - ./output:/home/output
       - ./nnUNet_results:/home/nnUNet/data/models
-    deploy:
-      resources:
-        reservations:
-          generic_resources:
-            - discrete_resource_spec:
-              kind: 'NVIDIA-GPU'
-              value: 0
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       generic_resources:
+    #         - discrete_resource_spec:
+    #           kind: 'NVIDIA-GPU'
+    #           value: 0
